<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeding_title"
        android:textSize="26dp"
        android:layout_marginTop="30dp"
        android:textColor="#000"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        >
        <com.github.mikephil.charting.charts.LineChart
            android:id = "@+id/chart"
            android:layout_width = "fill_parent"
            android:layout_height = "fill_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="4"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="18dp"
                android:background="@drawable/cell_border"
                android:gravity="center"
                android:text="@string/table_header_1"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="18dp"
                android:background="@drawable/cell_border"
                android:gravity="center"
                android:text="@string/table_header_2"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="18dp"
                android:background="@drawable/cell_border"
                android:gravity="center"
                android:text="@string/table_header_3"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="18dp"
                android:background="@drawable/cell_border"
                android:gravity="center"
                android:text="@string/table_header_4"
                />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/data_table"/>
    </LinearLayout>

</LinearLayout>