<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="vertical"
    tools:context=".RecordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:layout_weight="1">
        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="72dp"
            android:textColor="#000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1">
                <Button
                    android:id="@+id/start"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_btn"
                    android:layout_marginRight="20dp"
                    android:textSize="20dp"
                    android:paddingTop="10dp"
                    android:backgroundTint="@color/success_btn"
                    android:paddingBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/stop"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_btn"
                    android:layout_marginLeft="30dp"
                    android:textSize="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:backgroundTint="@color/danger_btn"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <Button
                android:id="@+id/reset"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/reset_btn"
                android:textSize="20dp"
                android:paddingTop="10dp"
                android:backgroundTint="@color/primary_btn"
                android:paddingBottom="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_btn"
                android:textSize="24dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeding_title"
            android:textSize="26dp"
            android:textColor="#000"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Fed(min)"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_marginLeft="40dp"/>
            <TextView
                android:id="@+id/feed"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20dp"
                android:textColor="#000"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:gravity="right"
                android:paddingRight="15dp"
                android:background="@drawable/total_bg"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_btn"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#fa5620"
            android:paddingBottom="10dp"
            />
    </LinearLayout>
</LinearLayout>